feat: Sort student lists alphabetically and switch to local SQLite DB

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DEBUG=True
 # Database Configuration (Supabase PostgreSQL)
 DB_ENGINE=django.db.backends.postgresql
 DB_NAME=postgres
-DB_USER=postgres.soulowpfhulnjhwmkcuf:onPeAMsCEqqNgHUi
+DB_USER=db.soulowpfhulnjhwmkcuf.supabase.co
 DB_PASSWORD=onPeAMsCEqqNgHUi
 DB_HOST=postgres.soulowpfhulnjhwmkcuf:onPeAMsCEqqNgHUi@aws-1-ap-south-1.pooler.supabase.com
 DB_PORT=6543
